fix: typo on settings_screen

--- a/app/screens/settings_screen.kv
+++ b/app/screens/settings_screen.kv
@@ -153,7 +153,7 @@
                     TextField:
                         size_hint_x: 0.8
                         TextInput:
-                            id: txt_adress
+                            id: txt_address
                             hint_text: "Address"
                     BigIconButton:
                         source: './assets/icons/save-disk_c.png'
