--- a/app/screens/widgets/categorybutton.kv
+++ b/app/screens/widgets/categorybutton.kv
@@ -19,6 +19,7 @@
         id: cat_icon
         source: root.icon
         size: 24,24
+        color: (1, 1, 1, 1) if  root.active else (.6, .6, .6, 1)
     Label:
         id: cat_label
         text: root.text
