feat: select option pressing numeric keys

--- a/app/screens/widgets/optionpopup.kv
+++ b/app/screens/widgets/optionpopup.kv
@@ -1,5 +1,5 @@
 #:kivy 2.2.1
-#:import TextField screens.widgets.textfield
+#:import InfoLabel screens.widgets.infolabel
 
 <OptionItem>
     padding: 10, 0
