refactor: change 'clean' for 'clear'

--- a/app/screens/budgets_screen.kv
+++ b/app/screens/budgets_screen.kv
@@ -80,7 +80,7 @@
                     source: './assets/icons/search_1.png'
                     size: dp(25), dp(25)
                     on_press: root.search_budget()
-                # Clean button
+                # Clear button
                 IconButton:
                     source: './assets/icons/big-cross_c.png'
                     size: dp(25), dp(25)
