--- a/app/screens/manage_prices_screen.kv
+++ b/app/screens/manage_prices_screen.kv
@@ -385,11 +385,11 @@
                     id: btn_compare
                     text: "Compare"
                     on_press: root.btn_compare_on_press()
-                # Clean
+                # Clear
                 EmptyButton:
-                    id: btn_clean
-                    text: "Clean"
-                    on_press: root.btn_clean_on_press()
+                    id: btn_clear
+                    text: "Clear"
+                    on_press: root.btn_clear_on_press()
                     on_release: txt_product.focus = True
         # Table
         DataTable:
