--- a/app/screens/buy_screen.kv
+++ b/app/screens/buy_screen.kv
@@ -339,11 +339,11 @@
                     id: btn_add_price
                     text: "Add"
                     on_release: root.btn_add_price_on_press()
-                # Clean
+                # Clear
                 EmptyButton:
-                    id: btn_clean
-                    text: "Clean"
-                    on_press: root.btn_clean_on_press()
+                    id: btn_clear
+                    text: "Clear"
+                    on_press: root.btn_clear_on_press()
                     on_release: txt_product.focus = True
             # Table
             DataTable:
