--- a/app/screens/home_screen.kv
+++ b/app/screens/home_screen.kv
@@ -85,17 +85,17 @@
                 id: home_screen_manager
                 Screen:
                     name: "none"
-                Buy:
-                    name: "buy"
-                Budgets:
-                    name: "budgets"
-                Clients:
-                    name: "clients"
-                PrintTables:
-                    name: "print"
-                ManagePrices:
-                    name: "manage"
-                GroupRaise:
-                    name: "group"
-                SettingsScreen:
-                    name: "settings"
+                # Buy:
+                #     name: "buy"
+                # Budgets:
+                #     name: "budgets"
+                # Clients:
+                #     name: "clients"
+                # PrintTables:
+                #     name: "print"
+                # ManagePrices:
+                #     name: "manage"
+                # GroupRaise:
+                #     name: "group"
+                # SettingsScreen:
+                #     name: "settings"
