--- a/app/screens/print_tables_screen.kv
+++ b/app/screens/print_tables_screen.kv
@@ -64,6 +64,7 @@
                             on_text: root.all_upper_case(self)
                             options: root.get_sections()
                             hint_text: "Section"
+                            on_select: root.section_on_select()
                     BoxLayout:
                         orientation: 'horizontal'
                         spacing: dp(10)
@@ -93,7 +94,8 @@
                             on_release: root.btn_add_table_name_on_press()
                     DataTable:
                         id: tbl_table_name
-                        header: ["Tables"]
+                        header: ["id", "Tables"]
+                        hint_sizes: (0.1, 0.9)
                         on_selected_row: root.on_selected_row_table_name()
                     FilledButton:
                         id: btn_select_table
@@ -368,5 +370,5 @@
                             on_state: root.update_columns(self.active, self.text)
                         CheckboxWithText:
                             id: chk_date
-                            text: "DATE"
+                            text: "FECHA"
                             on_state: root.update_columns(self.active, self.text)
